[package]
name = "trng-dbus"
version = "0.1.0"
edition = "2021"

[dependencies]
zbus = { version = "5.12.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
env_logger = "0.11.8"
libc = "0.2"
log = "0.4.28"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
async-trait = "0.1"
futures = "0.3"

[[bin]]
name = "trngdbus"
path = "src/main.rs"
